<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/emailInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/emailValue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="100dp"
        android:textSize="22sp"
        android:text="@string/registerInfo"/>

    <EditText
        android:id="@+id/emailValue"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        app:layout_constraintBottom_toTopOf="@+id/confirmBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInfoText"
        android:textSize="25sp"
        android:hint= "@string/registerHint"
        tools:ignore="TextFields"
        android:importantForAutofill="no"
        tools:targetApi="o" />

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="250dp"
        android:layout_height="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailValue"
        android:textSize="20sp"
        android:text="@string/confirm" />


</androidx.constraintlayout.widget.ConstraintLayout>